# tezedge-tui

./: .drone.yml  .gitignore  Cargo.toml  README.md
src/: action.rs  automaton.rs  configuration.rs  lib.rs  main.rs  model.rs  node_rpc.rs  state.rs  ui.rs  websocket.rs  websocket_deprecated.rs
src/automaton/: action.rs  action_logger.rs  automaton.rs  automaton_manager.rs  effect.rs  mod.rs  reducer.rs  state.rs
src/baking/: baking_actions.rs  baking_effects.rs  baking_reducer.rs  baking_state.rs  baking_view.rs  mod.rs
src/common/: mod.rs
src/endorsements/: endorsements_actions.rs  endorsements_effects.rs  endorsements_reducer.rs  endorsements_state.rs  endorsements_view.rs  mod.rs
src/extensions/: custom_border_separator.rs  extended_table.rs  mod.rs
src/extentions/: extended_table.rs
src/layout/: mempool.rs  mod.rs  statistics.rs  syncing.rs
src/model/: mempool_model.rs  mod.rs  operation_statistics_model.rs  state.rs  syncing_model.rs
src/operations/: mod.rs  operations_actions.rs  operations_effects.rs  operations_reducer.rs  operations_state.rs  operations_view.rs
src/rpc/: mod.rs  rpc_actions.rs  rpc_effects.rs  rpc_reducer.rs  rpc_state.rs
src/services/: mod.rs  rpc_service.rs  rpc_service_async.rs  service_async_channel.rs  tui_service.rs  ws_service.rs
src/synchronization/: mod.rs  synchronization_reducer.rs  synchronization_state.rs  synchronization_view.rs
src/terminal_ui/: mod.rs  tui_actions.rs  tui_effects.rs  tui_reducer.rs  tui_state.rs
src/websocket/: mod.rs  websocket_actions.rs  websocket_effects.rs
tests/: automaton_test.rs
tests/services_mocked/: mod.rs  rpc_service_async.rs  tui_service.rs  ws_service.rs
