[package]
name = "tezedge-tui"
description = "A terminal user interface for Tezedge"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@viablesystems.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", features = ["crossterm"]}
clap = "2.33"
crossterm ="0.22"
